# roboticprogramai

./: .gitignore  LICENSE  README.md  competitive-landscape.html  dashboard.html
docs/: API_CONTRACT.md  API_CONTRACT_v2.md  BASELINE_PHASE_A.md  EVOLUTION_PROOF_SPRINT16.md  OBSTACLE_PHASE_SPRINT17.md  PATROL_EVOLUTION_SPRINT18.md  PERTURBATION_PHASE_B.md  SPEC_hospital_scene.md  TDD_VISION_PRO_COCKPIT.md  TDD_VISION_PRO_COCKPIT_v2.md  VIEWER_OPS_REFERENCE.md  api_contract_sim_adapter.md  architecture_3_couches.md  changelog.jsonl  insights.md  rapport_positionnement.html  (+4 more)
robotics_env/: pyproject.toml
robotics_env/adapters/: __init__.py  go2_adapter.py  mono_robot_move.py  mono_robot_sense.py  robot_adapter.py  sim_adapter.py  types.py
robotics_env/agent/: __init__.py  jedi_agent.py  monocili_agent.py
robotics_env/agent/memory/: __init__.py  persistent_store.py
robotics_env/locomotion/: __init__.py  locomotion_controller.py
robotics_env/ros/config/: fastdds.xml  sim_bridge.yaml
robotics_env/ros/launch/: sim_bridge_launch.py
robotics_env/scripts/: hello_robot.py  install_isaac_sim.sh  install_ros2_humble.sh  install_ros2_jazzy.sh  setup_spark.sh
robotics_env/sim/: activate_isaaclab.sh  launch_isaaclab.py  launch_scene.py  ros2_state_bridge.py  test_dcmotor.py  test_isaaclab_obs_dump.py  test_isaaclab_policy.py  test_maxforce.py  test_nucleus_usd.py  test_policy_direct.py  web_viewer.py
robotics_env/sim/omnigraph/: go2_ros2_bridge.json
robotics_env/tests/: test_hello_robot.py  test_locomotion.py  test_robot_adapter.py  test_sim_adapter.py
